--- a/src/app/keychain/authorize/authorize.component.html
+++ b/src/app/keychain/authorize/authorize.component.html
@@ -1,5 +1,10 @@
 <div class="grid-container">
-    <div class="grid-x grid-padding-x grid-padding-y align-center align-middle app-full-height">
-        <button md-raised-button color="primary" (click)="authorize()">Authorize with Trello</button>
+    <div class="grid-x grid-padding-x grid-padding-y app-full-height app-center-content">
+        <div class="small-12 cell">
+            <h3>Please authorize yourself</h3>
+        </div>
+        <div class="small-12 cell">
+            <button md-raised-button color="primary" (click)="authorize()">Authorize with Trello</button>
+        </div>
     </div>
 </div>
